# water-heater-automata

./: Cargo.toml  LICENSE  README.md
.cargo/: config.toml
src/: main.rs
