[package]
name = "water-heater-automata"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = "0.2.7"
esp-hal = { version = "0.20.1", features = ["esp32s2"] }
esp-println = { version = "0.11.0", features = ["esp32s2"] }
esp-backtrace = { version = "0.14.1", features = ["esp32s2", "println", "exception-handler", "panic-handler"] }
esp-synopsys-usb-otg = "0.4.2"
